Ticket #28879: Moved TLScriptMethod to tl-model-search.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -13,6 +13,7 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_SING
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_THREE_ARGUMENTS_EXPECTED__CNT_EXPR = Three arguments expected but got {0} in: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TWO_ARGUMENTS_EXPECTED__CNT_EXPR = Two arguments expected but got {0} in: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_UNEXPECTED_ARGUMENT__FUN_CNT = Unexpected number of arguments in call of function "{0}", the function expects no more than {1} arguments.
+class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = The wrong argument was passed to parameter "{1}" of function "{0}". A value of type "{2}" was expected, but the value was: {3}
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_ACCESS_TO_CONFIGURATION_FAILED__NAME_MSG = Access to the configuration ''{0}'' failed: {1}
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_EITHER_SEVICE_OR_CONFIG = Either the <code>service</code> or the <code>config</code> argument must be given, not both.
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_INVALID_CONFIGURATION_TYPE__NAME_EXPECTED = Invalid configuration type ''{0}'', must be a sub-type of ''{1}''.
@@ -564,8 +565,16 @@ com.top_logic.model.search.expr.config.operations.ResourceBuilder$Builder = Buil
 com.top_logic.model.search.expr.config.operations.ResourceBuilder$Builder.tooltip = <i>Simple method builder</i> creating <i>resource builder</i>.
 com.top_logic.model.search.expr.config.operations.RoundBuilder = Round builder
 com.top_logic.model.search.expr.config.operations.RoundBuilder.tooltip = <i>Method builder</i> creating <i>round</i> expressions.
+com.top_logic.model.search.expr.config.operations.ScriptConversion = Script conversion
+com.top_logic.model.search.expr.config.operations.ScriptConversion.tooltip = Annotation to add a <i>value converter</i> to a method parameter.
+com.top_logic.model.search.expr.config.operations.ScriptConversion.value = Value
+com.top_logic.model.search.expr.config.operations.ScriptConversion.value.tooltip = The <i>value converter</i> implementation class.
 com.top_logic.model.search.expr.config.operations.SetBuilder = Set builder
 com.top_logic.model.search.expr.config.operations.SetBuilder.tooltip = <i>Method builder</i> creating <i>update</i> expressions.
+com.top_logic.model.search.expr.config.operations.SideEffectFree = Side effect free
+com.top_logic.model.search.expr.config.operations.SideEffectFree.canEvaluateAtCompileTime = Can evaluate at compile time
+com.top_logic.model.search.expr.config.operations.SideEffectFree.canEvaluateAtCompileTime.tooltip = Flag to set to allow constant folding by the TL-Script compiler. <p> When set to <code>true</code>, the method may be called at compile time, if all arguments are constants. </p>
+com.top_logic.model.search.expr.config.operations.SideEffectFree.tooltip = Annotation to set on a Java method that can be called from TL-Script, if the method has no side effects.
 com.top_logic.model.search.expr.config.operations.SingleArgMethodBuilder = Single argument method builder
 com.top_logic.model.search.expr.config.operations.SingleArgMethodBuilder.tooltip = <i>Method builder</i> for methods with one single argument.
 com.top_logic.model.search.expr.config.operations.SingleElementBuilder = Single element builder
@@ -582,6 +591,10 @@ com.top_logic.model.search.expr.config.operations.StringEndsWithBuilder = String
 com.top_logic.model.search.expr.config.operations.StringEndsWithBuilder.tooltip = <i>Method builder</i> creating <i>string ends with</i> expressions.
 com.top_logic.model.search.expr.config.operations.StringStartsWithBuilder = String starts with builder
 com.top_logic.model.search.expr.config.operations.StringStartsWithBuilder.tooltip = <i>Method builder</i> creating <i>string starts with</i> expressions.
+com.top_logic.model.search.expr.config.operations.TLScriptMethod$Builder = Builder
+com.top_logic.model.search.expr.config.operations.TLScriptMethod$Builder.tooltip = Builder for <i>script method</i>.
+com.top_logic.model.search.expr.config.operations.TLScriptMethod.Builder.Config.method = Method
+com.top_logic.model.search.expr.config.operations.TLScriptMethod.Builder.Config.method.tooltip = Qualified name of the static method to call in the form <code>fully.qualified.ClassName#methodName</code>
 com.top_logic.model.search.expr.config.operations.ThreeArgsMethodBuilder = Three arguments method builder
 com.top_logic.model.search.expr.config.operations.ThreeArgsMethodBuilder.tooltip = <i>Method builder</i> for methods with three arguments.
 com.top_logic.model.search.expr.config.operations.ThreeArgsOptionalBooleanMethodBuilder = Three arguments optional boolean method builder
