--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -13,6 +13,7 @@ class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_SING
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_THREE_ARGUMENTS_EXPECTED__CNT_EXPR = Es wurden drei Argumente erwartet, aber {0} sind eingegangen: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_TWO_ARGUMENTS_EXPECTED__CNT_EXPR = Zwei Argumente werden erwartet, aber {0} wurden eingegeben: {1}
 class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_UNEXPECTED_ARGUMENT__FUN_CNT = Unerwartete Anzahl von Argumenten beim Aufruf der Funktion "{0}", die Funktion erwartet nicht mehr als {1} Argumente.
+class.com.top_logic.model.search.expr.config.operations.I18NConstants.ERROR_WRONG_ARGUMENT__FUN_ARG_EXPECTED_VAL = Dem Parameter "{1}" der Funktion "{0}" wurde das falsche Argument übergeben. Es wurde ein Wert des Typs "{2}" erwartet, aber der Wert war: {3}
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_ACCESS_TO_CONFIGURATION_FAILED__NAME_MSG = Zugriff auf die Konfiguration ''{0}'' fehlgeschlagen: {1}
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_EITHER_SEVICE_OR_CONFIG = Es muss entweder das Argument <code>service</code> oder das Argument <code>config</code> angegeben werden, nicht beide.
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_INVALID_CONFIGURATION_TYPE__NAME_EXPECTED = Ungültiger Konfigurationstyp ''{0}'', muss ein Subtyp von ''{1}'' sein.
@@ -564,8 +565,16 @@ com.top_logic.model.search.expr.config.operations.ResourceBuilder$Builder = Bauh
 com.top_logic.model.search.expr.config.operations.ResourceBuilder$Builder.tooltip = <i>Einfacher Methoden-Builder</i>, der <i>Ressourcen-Builder</i> erstellt.
 com.top_logic.model.search.expr.config.operations.RoundBuilder = Runde Baumeister
 com.top_logic.model.search.expr.config.operations.RoundBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>runden</i> Ausdrücken.
+com.top_logic.model.search.expr.config.operations.ScriptConversion = Skript-Konvertierung
+com.top_logic.model.search.expr.config.operations.ScriptConversion.tooltip = Annotation zum Hinzufügen eines <i>Wertkonverters</i> zu einem Methodenparameter.
+com.top_logic.model.search.expr.config.operations.ScriptConversion.value = Wert
+com.top_logic.model.search.expr.config.operations.ScriptConversion.value.tooltip = Die Implementierungsklasse des <i>Wertkonverters</i>.
 com.top_logic.model.search.expr.config.operations.SetBuilder = Set-Builder
 com.top_logic.model.search.expr.config.operations.SetBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>Aktualisierungsausdrücken</i>.
+com.top_logic.model.search.expr.config.operations.SideEffectFree = Frei von Nebenwirkungen
+com.top_logic.model.search.expr.config.operations.SideEffectFree.canEvaluateAtCompileTime = Kann zur Kompilierzeit ausgewertet werden
+com.top_logic.model.search.expr.config.operations.SideEffectFree.canEvaluateAtCompileTime.tooltip = Zu setzendes Flag, um die Konstantenfaltung durch den TL-Script-Compiler zu ermöglichen. <p> Wenn es auf <code>true</code> gesetzt ist, kann die Methode zur Kompilierzeit aufgerufen werden, wenn alle Argumente Konstanten sind. </p>
+com.top_logic.model.search.expr.config.operations.SideEffectFree.tooltip = Annotation für eine Java-Methode, die von TL-Script aus aufgerufen werden kann, wenn die Methode keine Seiteneffekte hat.
 com.top_logic.model.search.expr.config.operations.SingleArgMethodBuilder = Erbauer von Ein-Argument-Methoden
 com.top_logic.model.search.expr.config.operations.SingleArgMethodBuilder.tooltip = <i>Methodenerbauer</i> für Methoden mit einem einzigen Argument.
 com.top_logic.model.search.expr.config.operations.SingleElementBuilder = Einzel-Element-Bauer
@@ -582,6 +591,10 @@ com.top_logic.model.search.expr.config.operations.StringEndsWithBuilder = Saiten
 com.top_logic.model.search.expr.config.operations.StringEndsWithBuilder.tooltip = <i>Methoden-Builder</i>, der <i>Zeichenkettenenden mit</i> Ausdrücken erzeugt.
 com.top_logic.model.search.expr.config.operations.StringStartsWithBuilder = Zeichenfolge beginnt mit Builder
 com.top_logic.model.search.expr.config.operations.StringStartsWithBuilder.tooltip = <i>Der Methodenersteller</i>, der eine <i>Zeichenfolge</i> erstellt, <i>beginnt mit</i> Ausdrücken.
+com.top_logic.model.search.expr.config.operations.TLScriptMethod$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.TLScriptMethod$Builder.tooltip = Erbauer der <i>Skriptmethode</i>.
+com.top_logic.model.search.expr.config.operations.TLScriptMethod.Builder.Config.method = Methode
+com.top_logic.model.search.expr.config.operations.TLScriptMethod.Builder.Config.method.tooltip = Qualifizierter Name der aufzurufenden statischen Methode in der Form <code>fully.qualified.ClassName#methodName</code>
 com.top_logic.model.search.expr.config.operations.ThreeArgsMethodBuilder = Erbauer der Methode mit drei Argumenten
 com.top_logic.model.search.expr.config.operations.ThreeArgsMethodBuilder.tooltip = <i>Methodenerbauer</i> für Methoden mit drei Argumenten.
 com.top_logic.model.search.expr.config.operations.ThreeArgsOptionalBooleanMethodBuilder = Drei Argumente optionaler boolescher Erbauer von Methoden
