Ticket #28879: Added MethodResolver creating methods for TLScriptMethod for all methods in a configured class.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -595,6 +595,8 @@ com.top_logic.model.search.expr.config.operations.TLScriptMethod$Builder = Erbau
 com.top_logic.model.search.expr.config.operations.TLScriptMethod$Builder.tooltip = Erbauer der <i>Skriptmethode</i>.
 com.top_logic.model.search.expr.config.operations.TLScriptMethod.Builder.Config.method = Methode
 com.top_logic.model.search.expr.config.operations.TLScriptMethod.Builder.Config.method.tooltip = Qualifizierter Name der aufzurufenden statischen Methode in der Form <code>fully.qualified.ClassName#methodName</code>
+com.top_logic.model.search.expr.config.operations.TLScriptMethodResolver = Skript-Methodenauflöser
+com.top_logic.model.search.expr.config.operations.TLScriptMethodResolver.tooltip = <i>Methodenauflöser</i>, der Methoden in allen Erweiterungen von <i>Skriptfunktionen</i> als TL-Script-Funktionen anbietet.
 com.top_logic.model.search.expr.config.operations.ThreeArgsMethodBuilder = Erbauer der Methode mit drei Argumenten
 com.top_logic.model.search.expr.config.operations.ThreeArgsMethodBuilder.tooltip = <i>Methodenerbauer</i> für Methoden mit drei Argumenten.
 com.top_logic.model.search.expr.config.operations.ThreeArgsOptionalBooleanMethodBuilder = Drei Argumente optionaler boolescher Erbauer von Methoden
