--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -595,6 +595,8 @@ com.top_logic.model.search.expr.config.operations.TLScriptMethod$Builder = Build
 com.top_logic.model.search.expr.config.operations.TLScriptMethod$Builder.tooltip = Builder for <i>script method</i>.
 com.top_logic.model.search.expr.config.operations.TLScriptMethod.Builder.Config.method = Method
 com.top_logic.model.search.expr.config.operations.TLScriptMethod.Builder.Config.method.tooltip = Qualified name of the static method to call in the form <code>fully.qualified.ClassName#methodName</code>
+com.top_logic.model.search.expr.config.operations.TLScriptMethodResolver = Script method resolver
+com.top_logic.model.search.expr.config.operations.TLScriptMethodResolver.tooltip = <i>Method resolver</i> that offers methods in all extensions of <i>script functions</i> as TL-Script functions.
 com.top_logic.model.search.expr.config.operations.ThreeArgsMethodBuilder = Three arguments method builder
 com.top_logic.model.search.expr.config.operations.ThreeArgsMethodBuilder.tooltip = <i>Method builder</i> for methods with three arguments.
 com.top_logic.model.search.expr.config.operations.ThreeArgsOptionalBooleanMethodBuilder = Three arguments optional boolean method builder
