Ticket #28765: Added drop to upload functionality.

--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -1288,6 +1288,7 @@ class.com.top_logic.layout.form.control.I18NConstants.CALENDAR_PREV_YEAR = Vorhe
 class.com.top_logic.layout.form.control.I18NConstants.CALENDAR_SHOW_TODAY = Zum heutigen Datum springen
 class.com.top_logic.layout.form.control.I18NConstants.CALENDAR_YEAR_OVERVIEW = Jahresübersicht
 class.com.top_logic.layout.form.control.I18NConstants.CLEAR_DATA_ITEM = Dateieintrag entfernen
+class.com.top_logic.layout.form.control.I18NConstants.CLEAR_IMAGE = Bild entfernen
 class.com.top_logic.layout.form.control.I18NConstants.CLEAR_SELECTION = Auswahl leeren
 class.com.top_logic.layout.form.control.I18NConstants.COLOR_SELECTION = Farbauswahl
 class.com.top_logic.layout.form.control.I18NConstants.DATA_ITEM_NOT_FOUND__ITEM_ID = Item mit ID {0} nicht gefunden.
