--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_en.properties
@@ -1288,6 +1288,7 @@ class.com.top_logic.layout.form.control.I18NConstants.CALENDAR_PREV_YEAR = Previ
 class.com.top_logic.layout.form.control.I18NConstants.CALENDAR_SHOW_TODAY = Show today
 class.com.top_logic.layout.form.control.I18NConstants.CALENDAR_YEAR_OVERVIEW = Show whole year
 class.com.top_logic.layout.form.control.I18NConstants.CLEAR_DATA_ITEM = Clear file entry
+class.com.top_logic.layout.form.control.I18NConstants.CLEAR_IMAGE = Clear image
 class.com.top_logic.layout.form.control.I18NConstants.CLEAR_SELECTION = Clear selection
 class.com.top_logic.layout.form.control.I18NConstants.COLOR_SELECTION = Select color
 class.com.top_logic.layout.form.control.I18NConstants.DATA_ITEM_NOT_FOUND__ITEM_ID = Item with id {0} not found.
