--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -134,6 +134,8 @@ class.com.top_logic.layout.form.control.I18NConstants.SET_VALUE_CLOSE_POPUP = Le
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_COMPLETED_COMMAND = Rückruf nach Upload
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_LABEL = Datei auswählen
 class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_LABEL.tooltip = Öffnet die Dateiauswahl zum Hochladen einer Datei.
+class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_IMAGE_LABEL = Bild hochladen
+class.com.top_logic.layout.form.control.I18NConstants.UPLOAD_IMAGE_LABEL.tooltip = Öffnet die Dateiauswahl zum Hochladen eines Bilds.
 class.com.top_logic.layout.form.format.I18NConstants.ERROR_INVALID_COLOR_FORMAT__VALUE = Ungültige Farbangabe: {0}
 class.com.top_logic.layout.form.model.I18NConstants.DATE_TIME_FIELD_NO_DATE_VALUE__VALUE = Der Tageswert kann nicht geparst werden: {0}
 class.com.top_logic.layout.form.model.I18NConstants.DATE_TIME_FIELD_NO_TIME_VALUE__VALUE = Der Zeitwert kann nicht geparst werden: {0}
