Ticket #28879: Added "return" section to AbstractScriptDocumentation.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -41,6 +41,7 @@ class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PA
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_COLUMN_NAME = Name
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_COLUMN_TYPE = Typ
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_HEADER = Parameter
+class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_RETURN_HEADER = Rückgabewert
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_SYNTAX_HEADER = Syntax
 class.com.top_logic.model.search.form.I18NConstants.ERROR_INVALID_IMAGE_DEFINITION__SOURCE__POSITION = Ungültiges Vorschaubild an Position {1}: {0}
 class.com.top_logic.model.search.form.I18NConstants.ERROR_NO_IMAGE__OBJ = {0} ist kein Vorschaubild.
