--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -41,6 +41,7 @@ class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PA
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_COLUMN_NAME = Name
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_COLUMN_TYPE = Type
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_PARAMETERS_HEADER = Parameters
+class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_RETURN_HEADER = Return value
 class.com.top_logic.model.search.expr.documentation.I18NConstants.MESSAGE_DOC_SYNTAX_HEADER = Syntax
 class.com.top_logic.model.search.form.I18NConstants.ERROR_INVALID_IMAGE_DEFINITION__SOURCE__POSITION = Invalid preview image at position {1}: {0}
 class.com.top_logic.model.search.form.I18NConstants.ERROR_NO_IMAGE__OBJ = {0} is no preview image.
