--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -287,6 +287,8 @@ com.top_logic.model.search.expr.ToUserCalendar$Builder = Erbauer
 com.top_logic.model.search.expr.ToUserCalendar$Builder.tooltip = <i>Method Builder</i> erstellt <i>einen Benutzerkalender</i>.
 com.top_logic.model.search.expr.Traverse$Builder = Erbauer
 com.top_logic.model.search.expr.Traverse$Builder.tooltip = Fabrik für <i>Traverse-Methoden</i>.
+com.top_logic.model.search.expr.Try$Builder = Erbauer
+com.top_logic.model.search.expr.Try$Builder.tooltip = <i>Einfacher Erbauer einer Methode</i>, der eine <i>Try-Funktion</i> erstellt.
 com.top_logic.model.search.expr.config.SearchBuilder = Suchausdruck-Generator
 com.top_logic.model.search.expr.config.SearchBuilder.Config.method-resolvers = Methodenauflöser
 com.top_logic.model.search.expr.config.SearchBuilder.Config.method-resolvers.tooltip = Auflöser für dynamisch definierte Methoden.
