Ticket #28879: Added script prefix.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -570,6 +570,10 @@ com.top_logic.model.search.expr.config.operations.ScriptConversion = Skript-Konv
 com.top_logic.model.search.expr.config.operations.ScriptConversion.tooltip = Annotation zum Hinzufügen eines <i>Wertkonverters</i> zu einem Methodenparameter.
 com.top_logic.model.search.expr.config.operations.ScriptConversion.value = Wert
 com.top_logic.model.search.expr.config.operations.ScriptConversion.value.tooltip = Die Implementierungsklasse des <i>Wertkonverters</i>.
+com.top_logic.model.search.expr.config.operations.ScriptPrefix = Skript-Präfix
+com.top_logic.model.search.expr.config.operations.ScriptPrefix.tooltip = Präfix für alle Methoden in der annotierten Skriptfunktionsklasse.
+com.top_logic.model.search.expr.config.operations.ScriptPrefix.value = Wert
+com.top_logic.model.search.expr.config.operations.ScriptPrefix.value.tooltip = Präfix für die Skriptfunktionen.
 com.top_logic.model.search.expr.config.operations.SetBuilder = Set-Builder
 com.top_logic.model.search.expr.config.operations.SetBuilder.tooltip = <i>Methoden-Builder</i> zum Erstellen von <i>Aktualisierungsausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.SideEffectFree = Frei von Nebenwirkungen
