--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -570,6 +570,10 @@ com.top_logic.model.search.expr.config.operations.ScriptConversion = Script conv
 com.top_logic.model.search.expr.config.operations.ScriptConversion.tooltip = Annotation to add a <i>value converter</i> to a method parameter.
 com.top_logic.model.search.expr.config.operations.ScriptConversion.value = Value
 com.top_logic.model.search.expr.config.operations.ScriptConversion.value.tooltip = The <i>value converter</i> implementation class.
+com.top_logic.model.search.expr.config.operations.ScriptPrefix = Script prefix
+com.top_logic.model.search.expr.config.operations.ScriptPrefix.tooltip = Prefix for all methods in the annotated script function class.
+com.top_logic.model.search.expr.config.operations.ScriptPrefix.value = Value
+com.top_logic.model.search.expr.config.operations.ScriptPrefix.value.tooltip = Prefix for the script functions.
 com.top_logic.model.search.expr.config.operations.SetBuilder = Set builder
 com.top_logic.model.search.expr.config.operations.SetBuilder.tooltip = <i>Method builder</i> creating <i>update</i> expressions.
 com.top_logic.model.search.expr.config.operations.SideEffectFree = Side effect free
