Ticket #28604: Added annotation to mark an element as persistent cache.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7270,6 +7270,8 @@ com.top_logic.model.annotate.TLObjectInitializers = Objekt-Initialisierer
 com.top_logic.model.annotate.TLObjectInitializers.initializers = Initialisierungen
 com.top_logic.model.annotate.TLObjectInitializers.initializers.tooltip = Die <i>Objektinitialisierer</i>, die ausgeführt werden sollen, wenn ein neues Element des annotierten Typs erstellt wird.
 com.top_logic.model.annotate.TLObjectInitializers.tooltip = <i>Type Annotation</i>, die Initialisierungen enthält, die ausgeführt werden, wenn ein neues Element des annotierten Typs erstellt wird.
+com.top_logic.model.annotate.TLPersistentCache = Dauerhafter Cache
+com.top_logic.model.annotate.TLPersistentCache.tooltip = Diese Annotation legt fest, ob es sich bei den Werten des annotierten Objekts eigentlich um einen persistenten Cache handelt. <p> Handelt es sich bei dem annotierten Element um einen <i>strukturierten Typ</i>, so werden Instanzen dieser Klasse als persistenter Cache verwendet, z. B. aus Performance-Gründen. </p> <p> Handelt es sich bei dem annotierten Element um einen <i>Teil eines strukturierten Typs</i>, wird der Wert des Attributs als persistenter Cache verwendet, z. B. aus Performance-Gründen. </p> <p> In all diesen Fällen ändert die Anwendung den Wert automatisch und er darf nicht vom Benutzer geändert werden. </p>
 com.top_logic.model.annotate.TLRange = Bereich
 com.top_logic.model.annotate.TLRange.max = Maximum
 com.top_logic.model.annotate.TLRange.max.tooltip = Die obere Grenze für den Wert, <code>null</code> für keine Beschränkung.
