--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7270,6 +7270,8 @@ com.top_logic.model.annotate.TLObjectInitializers = Object initializers
 com.top_logic.model.annotate.TLObjectInitializers.initializers = Initializers
 com.top_logic.model.annotate.TLObjectInitializers.initializers.tooltip = The <i>object initializers</i> to execute when a new item of the annotated type is created.
 com.top_logic.model.annotate.TLObjectInitializers.tooltip = <i>Type annotation</i> that holds initializers to execute when a new item of the annotated type is created.
+com.top_logic.model.annotate.TLPersistentCache = Persistent cache
+com.top_logic.model.annotate.TLPersistentCache.tooltip = This annotation determines if the values of the annotated object is actually a persistent cache. <p> When the annotated element is a <i>structured type</i>, then instances of this class are used as a persistent cache, e.g. for performance reasons. </p> <p> When the annotated element is a <i>structured type part</i>, the value of the attribute is used as a persistent cache, e.g. for performance reasons. </p> <p> In all these cases, the application automatically changes the value and it must not be changed by the user. </p>
 com.top_logic.model.annotate.TLRange = Range
 com.top_logic.model.annotate.TLRange.max = Maximum
 com.top_logic.model.annotate.TLRange.max.tooltip = The upper bound on the value, <code>null</code> for no constraint.
