Ticket #28765: Added Annotation for Image or DataItem binary data.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -7395,6 +7395,16 @@ com.top_logic.model.annotate.security.TLRoleDefinitions = Rollendefinitionen
 com.top_logic.model.annotate.security.TLRoleDefinitions.roles = Rollen
 com.top_logic.model.annotate.security.TLRoleDefinitions.roles.tooltip = Rollen, die durch das annotierte Modul definiert sind.
 com.top_logic.model.annotate.security.TLRoleDefinitions.tooltip = <i>Modulanmerkung</i> zur Definition von Rollen im Kontext eines <i>Moduls</i>.
+com.top_logic.model.annotate.ui.BinaryDisplay = Binärdaten Anzeige
+com.top_logic.model.annotate.ui.BinaryDisplay$BinaryPresentation = Präsentation der Binärdaten
+com.top_logic.model.annotate.ui.BinaryDisplay$BinaryPresentation.tooltip = Darstellungsoptionen für ein Binärdaten-Attribut.
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM = Button mit Dateiliste
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM.tooltip = Anzeige als Button zum hochladen und Liste der hochgeladenen Dateien.
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD = Bild Drop-Feld
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD.tooltip = Anzeige als Feld zum Hochladen per Klick oder Drop und Darstellung des hochgeladenen Bildes.
+com.top_logic.model.annotate.ui.BinaryDisplay.tooltip = Anzeige-Einstellungen für ein Attribut, das Binärdaten enthält und das Hochladen von Dateien erlaubt.
+com.top_logic.model.annotate.ui.BinaryDisplay.value = Darstellung
+com.top_logic.model.annotate.ui.BinaryDisplay.value.tooltip = Wie Sie dieses Attribut standardmäßig anzeigen können.
 com.top_logic.model.annotate.ui.BooleanDisplay = Boolesche Anzeige
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation = Präsentation
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation.tooltip = Wie Sie dieses Attribut standardmäßig anzeigen können.
