--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7395,6 +7395,16 @@ com.top_logic.model.annotate.security.TLRoleDefinitions = Role definitions
 com.top_logic.model.annotate.security.TLRoleDefinitions.roles = Roles
 com.top_logic.model.annotate.security.TLRoleDefinitions.roles.tooltip = Roles defined by the annotated module.
 com.top_logic.model.annotate.security.TLRoleDefinitions.tooltip = <i>Module annotation</i> for defining roles in the context of a <i>module</i>.
+com.top_logic.model.annotate.ui.BinaryDisplay = Binary data display
+com.top_logic.model.annotate.ui.BinaryDisplay$BinaryPresentation = Presentation of the binary data
+com.top_logic.model.annotate.ui.BinaryDisplay$BinaryPresentation.tooltip = Display options for a binary data attribute.
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM = Button with file list
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.DATA_ITEM.tooltip = Display as button to upload files and list of the uploaded files.
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD = Image drop field
+com.top_logic.model.annotate.ui.BinaryDisplay.BinaryPresentation.IMAGE_UPLOAD.tooltip = Display as field to upload via click or drop and display of the uploaded image.
+com.top_logic.model.annotate.ui.BinaryDisplay.tooltip = Display settings for an attribute, that contains binary data and allows the upload of files.
+com.top_logic.model.annotate.ui.BinaryDisplay.value = Presentation
+com.top_logic.model.annotate.ui.BinaryDisplay.value.tooltip = How to display this attribute by default.
 com.top_logic.model.annotate.ui.BooleanDisplay = Boolean display
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation = Presentation
 com.top_logic.model.annotate.ui.BooleanDisplay.presentation.tooltip = How to display this attribute by default.
