Ticket #28886: Allow in-app resolver configuration.
Added short-cut resolver "by attribute" that makes simple cases more
easy.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -964,6 +964,12 @@ com.top_logic.model.search.providers.InitializerByExpression = Berechneter Initi
 com.top_logic.model.search.providers.InitializerByExpression.Config.function = Funktion
 com.top_logic.model.search.providers.InitializerByExpression.Config.function.tooltip = Funktion, die ein Objekt des annotierten Typs initialisiert. <p> Es wird erwartet, dass die Funktion das neu erstellte Objekt als einziges Argument verwendet. </p> <p> Das Objekt hat bereits Standardwerte für alle Attribute. </p>
 com.top_logic.model.search.providers.InitializerByExpression.tooltip = <i>Objektinitialisierer</i>, der das Objekt durch Ausführen eines <code>TL-Script</code> initialisiert.
+com.top_logic.model.search.providers.InstanceResolverByAttribute = Instanzauflöser nach Attribut
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.attribute = Attribut
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.attribute.tooltip = Das identifizierende Attribut.
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type = Typ
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type.tooltip = Der aufzulösende Typ.
+com.top_logic.model.search.providers.InstanceResolverByAttribute.tooltip = <i>Instanzauflöser</i>, der Objekte anhand von Attributen mit eindeutigen Werten identifiziert. <p> Dieser Resolver sollte nur verwendet werden, wenn der aufgelöste Typ eine Abbildung in einer Tabelle hat und das Attribut vom primitiven Typ auf eine DB-Spalte mit einem eindeutigen Index abgebildet ist. Wenn dies nicht der Fall ist, wird die Auflösung von Objekten ineffizient und speicherintensiv. Stellen Sie in diesem Fall sicher, dass es nur eine kleine Anzahl solcher Objekte gibt. </p>
 com.top_logic.model.search.providers.InstanceResolverByExpression = TL-Script-Instanzauflöser
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity = Identität
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity.tooltip = Funktion, die eine stabile ID für ein Objekt berechnet. <p> Die Funktion erwartet das zu identifizierende Objekt als Argument und muss die ID des Objekts als Ergebnis zurückgeben. </p>
