--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -7697,7 +7697,7 @@ com.top_logic.model.format.TLClassifierFormat.tooltip = Configurable <i>configur
 com.top_logic.model.instance.annotation.TLInstanceResolver = Instance resolver
 com.top_logic.model.instance.annotation.TLInstanceResolver.impl = Implementation
 com.top_logic.model.instance.annotation.TLInstanceResolver.impl.tooltip = The resolver implementation to use for the annotated type.
-com.top_logic.model.instance.annotation.TLInstanceResolver.tooltip = Annotation specifying an <i>instance resolver</i> implementation for a certain object type.
+com.top_logic.model.instance.annotation.TLInstanceResolver.tooltip = Annotation specifying an <i>instance resolver</i> implementation for a certain object type. <p> An <i>instance resolver</i> is used to create and resolve references to objects from object exports. Typically, an object export does not export all objects that are transitively referenced from the root object of the export. Instead, the export only transitively exports objects that are stored in compositions but references other objects by some IDs. An <i>instance resolver</i> is in charge of creating those IDs and resolving them during a re-import. </p>
 com.top_logic.model.instance.annotation.TLValueResolver = Value resolver
 com.top_logic.model.instance.annotation.TLValueResolver.impl = Implementation
 com.top_logic.model.instance.annotation.TLValueResolver.impl.tooltip = The <i>value resolver</i> implementation to use for exporting and importing values of the annotated type.
