--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -986,6 +986,12 @@ com.top_logic.model.search.providers.InitializerByExpression = Computed initiali
 com.top_logic.model.search.providers.InitializerByExpression.Config.function = Function
 com.top_logic.model.search.providers.InitializerByExpression.Config.function.tooltip = Function initializing an object of the annotated type. <p> The function is expected to use the newly created object single argument. </p> <p> The object already has default values for all attributes. </p>
 com.top_logic.model.search.providers.InitializerByExpression.tooltip = <i>Object initializer</i> initializing the object by executing a <code>TL-Script</code> expression.
+com.top_logic.model.search.providers.InstanceResolverByAttribute = Instance resolver by attribute
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.attribute = Attribute
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.attribute.tooltip = The identifying attribute.
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type = Type
+com.top_logic.model.search.providers.InstanceResolverByAttribute.Config.type.tooltip = The type to resolve.
+com.top_logic.model.search.providers.InstanceResolverByAttribute.tooltip = <i>Instance resolver</i> that identifies objects by attributes with unique values. <p> This resolver should only be used, if the resolved type has a table mapping and the attribute of primitive type and mapped to a DB column with a unique index. If this is not the case, resolving objects becomes inefficient and memory consuming. In that case, make sure, that there is only a small amount of such objects. </p>
 com.top_logic.model.search.providers.InstanceResolverByExpression = TL-Script instance resolver
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity = Identity
 com.top_logic.model.search.providers.InstanceResolverByExpression.Config.identity.tooltip = Function computing a stable an ID for an object. <p> The function expects the object to identify as argument and must return the object's ID as result. </p>
