Ticket #28886: Allow to customize the export command.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -591,7 +591,25 @@ com.top_logic.element.layout.instances.DirectInstancesTable = Tabelle der direkt
 com.top_logic.element.layout.instances.DirectInstancesTable.tooltip = <i>Tabellenkonfigurations-Plugin</i>, das eine Tabelle mit dem Modell der sie umgebenden Komponente konfiguriert (in der Erwartung, dass es sich um einen <i>Geschäftsobjekttyp</i> handelt).
 com.top_logic.element.layout.instances.InstanceBrowserGrid = Instanz-Browser-Gitter
 com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid-Komponente</i> für die generische Instanzentabelle in der Administration. <p> Sie setzt die <i>Sichtbarkeit</i> aus dem Modell außer Kraft und zeigt jede Spalte als bearbeitbar an, es sei denn, dies ist technisch unmöglich (z. B. berechnete Spalten). </p>
+com.top_logic.element.layout.instances.export.CustomResolver = Benutzerdefinierter Resolver
+com.top_logic.element.layout.instances.export.CustomResolver.Config.resolver = Auflöser
+com.top_logic.element.layout.instances.export.CustomResolver.Config.resolver.tooltip = Die Resolver-Implementierung für den angegebenen <i>Typ</i>.
+com.top_logic.element.layout.instances.export.CustomResolver.Config.type = Typ
+com.top_logic.element.layout.instances.export.CustomResolver.Config.type.tooltip = Der Typ, für den der Resolver verwendet werden soll.
+com.top_logic.element.layout.instances.export.CustomResolver.tooltip = Angabe eines Objektresolvers, der ausschließlich für diesen Export verwendet werden soll. <p> Hinweis: Im Allgemeinen ist es besser, den Resolver an den referenzierten Typ zu annotieren, da ein lokaler Resolver auch für die entsprechende Importfunktionalität vorhanden sein muss, um die Auflösung der Referenz zu ermöglichen. Daher sollte diese Anpassung nur verwendet werden, wenn eine Modifikation des Modells nicht in Frage kommt. </p>
+com.top_logic.element.layout.instances.export.ExcludeParts = Teile ausschließen
+com.top_logic.element.layout.instances.export.ExcludeParts.Config.parts = Teile
+com.top_logic.element.layout.instances.export.ExcludeParts.Config.parts.tooltip = Attribute, die vom Export ausgeschlossen werden sollen.
+com.top_logic.element.layout.instances.export.ExcludeParts.Config.type = Typ
+com.top_logic.element.layout.instances.export.ExcludeParts.Config.type.tooltip = Der Typ, von dem Attribute ausgeschlossen werden sollen.
+com.top_logic.element.layout.instances.export.ExcludeParts.tooltip = <i>Exportieren von Anpassungen</i>, die ein konfiguriertes Attribut oder eine Referenz ausschließen.
+com.top_logic.element.layout.instances.export.ExcludeTypes = Typen ausschließen
+com.top_logic.element.layout.instances.export.ExcludeTypes.Config.types = Typen
+com.top_logic.element.layout.instances.export.ExcludeTypes.Config.types.tooltip = Der Typa, der vom Export ausgeschlossen werden soll.
+com.top_logic.element.layout.instances.export.ExcludeTypes.tooltip = <i>Exportanpassung</i>, die Typen vom Export ausschließt.
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instanzexport
+com.top_logic.element.layout.instances.export.InstanceExportCommand.Config.customizations = Anpassungen
+com.top_logic.element.layout.instances.export.InstanceExportCommand.Config.customizations.tooltip = Zusätzliche Einrichtungsaktionen, die den Exportprozess anpassen.
 com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Befehlshandler</i>, der die ausgewählten Objekte in XML exportiert, um sie später wieder zu importieren.
 com.top_logic.element.layout.instances.importer.InstanceImportCommand = Befehl zum Importieren einer Instanz
 com.top_logic.element.layout.instances.importer.InstanceImportCommand.tooltip = <i>Befehl</i> zum Importieren von Objekten aus einer hochgeladenen XML-Datei.
