Ticket #28886: Show objects after import.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -22,6 +22,7 @@ class.com.top_logic.element.layout.grid.I18NConstants.NO_CONTEXT_OBJECT_FOR_ROW 
 class.com.top_logic.element.layout.grid.I18NConstants.NO_NEW_OBJECT_FOR_THIS_CONTEXT__CONTEXT = Es ist nicht möglich, ein neues Objekt in diesem Kontext zu erstellen: {0}
 class.com.top_logic.element.layout.instances.importer.I18NConstants.COMMITTING_CHANGES = Änderungen festschreiben.
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTED_OBJECTS = Objekte importiert.
+class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTED_OBJECTS__OBJS = Importierte Objekte: {0}
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTING_OBJECTS = Objekte importieren.
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_FINISHED = Import beendet.
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_PROGRESS = Daten importieren...
