--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -22,6 +22,7 @@ class.com.top_logic.element.layout.grid.I18NConstants.NO_CONTEXT_OBJECT_FOR_ROW 
 class.com.top_logic.element.layout.grid.I18NConstants.NO_NEW_OBJECT_FOR_THIS_CONTEXT__CONTEXT = It's not possible to create a new object in this context: {0}
 class.com.top_logic.element.layout.instances.importer.I18NConstants.COMMITTING_CHANGES = Committing changes.
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTED_OBJECTS = Imported objects.
+class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTED_OBJECTS__OBJS = Objects imported: {0}
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORTING_OBJECTS = Importing objects.
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_FINISHED = Import finished.
 class.com.top_logic.element.layout.instances.importer.I18NConstants.IMPORT_PROGRESS = Importing data...
