Ticket #28886: Internationalized importer messages.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -212,6 +212,29 @@ class.com.top_logic.model.form.implementation.additional.I18NConstants.SET_START
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_PARSE_REFERENCE__REFERENCE = Objektreferenz ''{0}'' kann nicht geparst werden.
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_RESOLVE_REFERENCE__REFERENCE = Referenz ''{0}'' auf Objekt kann nicht aufgelöst werden.
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_RESOLVE_STATIC_TYPE__REFERENCE = Typ in Objektreferenz ''{0}'' kann nicht aufgelöst werden.
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_READING_VALUE__ATR_MSG = Der Wert des Attributs{0}" kann nicht aus xml gelesen werden: {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_RESOLVING_TYPE__KIND_MSG = Typ{0}" kann nicht aufgelöst werden: {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_CREATE_BINDING__ATTR_MSG = Kann keine Wertebindung für{0}" erstellen: {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_SERIALIZE__VAL_ATTR_MSG = Der Wert "{0}" von Attribut {1} konnte nicht serialisiert werden: {2}
+class.com.top_logic.model.instance.importer.I18NConstants.CANNOT_ASSIGN_PLAIN_VALUE_TO_REF__ATTR_VAL_LOC = Das Referenzattribut {0} darf bei {2} nicht mit dem einfachen Wert "{1}" belegt werden.
+class.com.top_logic.model.instance.importer.I18NConstants.ERROR_STORING_COLLECTION_TO_SINGLE_REF__ATTR_LOC = Es können nicht mehrere Werte in der Singleton-Referenz "{0}" bei {1} gespeichert werden.
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_SETTING_VALUE__VAL_ATTR_LOC_MSG = Der Wert "{0}" konnte nicht in das Attribut "{1}" gesetzt werden ({2}): {3}
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_IMPORT__ID_TYPE_MSG = Das Objekt mit der ID "{0}" vom Typ "{1}" konnte nicht importiert werden: {2}
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_OBJECT__TYPE_ID_MSG = Das Objekt vom Typ "{0}" mit der ID "{1}" konnte nicht aufgelöst werden: {2}
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_VALUE__VAL_LOC_MSG = Der Wert "{0}" konnte nicht aufgelöst werden ({1}): {2}
+class.com.top_logic.model.instance.importer.I18NConstants.INVALID_BINARY_FORMAT__VAL_MSG = Ungültiges Binärformat in "{0}": {1}
+class.com.top_logic.model.instance.importer.I18NConstants.INVALID_DATE_FORMAT__VAL_MSG = Ungültiges Datumsformat in "{0}": {1}
+class.com.top_logic.model.instance.importer.I18NConstants.INVALID_ID_FORMAT__VAL_MSG = Ungültiges ID-Format in "{0}": {1}
+class.com.top_logic.model.instance.importer.I18NConstants.INVALID_NUMBER_FORMAT__VAL_MSG = Ungültiges Zahlenformat in "{0}": {1}
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_CLASSIFIER__TYPE_PART_LOC = Enum "{0}" hat keinen Klassifikator "{1}" bei {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_MODULE__NAME_REF_LOC = Modul "{0}" in "{1}" nicht gefunden bei {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_PART__ATTR_TYPE_LOC = Kein solcher Teil "{0}" in Typ "{1}" bei {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_PART__TYPE_PART_LOC = Typ "{0}" hat keinen Teil "{1}" bei {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_SINGLETON__NAME_MODULE_LOC = Kein Singleton "{0}" definiert in Modul "{1}" bei {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_TYPE__NAME_REF_LOC = Typ "{0}" in "{1}" nicht gefunden bei {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.PRIMITIVE_TYPE_WITH_PART__TYPE_PART_LOC = Der Primitivtyp "{0}" kann keinen Teil "{1}" haben bei {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.UNKNOWN_TYPE__KIND_TYPE_LOC = Unbekannte Typ-Art "{0}" des Typs "{1}" bei {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.UNRESOLVED_REFERENCE__ID_LOC = Unaufgelöste Referenz "{0}" bei {1}.
 class.com.top_logic.model.util.I18NConstants.ERROR_CYLCE_NOT_ALLOWED__OBJECT_ATTRIBUTE_VALUE_CYCLE = Der Wert {2} für Attribut {1} in Objekt {0} ergibt einen Zyklus: {3}
 class.com.top_logic.model.util.I18NConstants.ERROR_INVALID_LEGACY_TYPE_FORMAT__EXPECTED_ACTUAL = Ungültiges Legacy-Typ-Format "{1}", erwartet: {0}
 class.com.top_logic.model.util.I18NConstants.ERROR_INVALID_QUALIFIED_TYPE_NAME__VALUE = Der Wert muss ein qualifizierter Typname sein. Ein qualifizierter Typname hat das Format "[Modul]:[Typ]": {0}
