--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -212,6 +212,29 @@ class.com.top_logic.model.form.implementation.additional.I18NConstants.SET_START
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_PARSE_REFERENCE__REFERENCE = Cannot parse object reference ''{0}''.
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_RESOLVE_REFERENCE__REFERENCE = Cannot resolve reference ''{0}'' to object.
 class.com.top_logic.model.format.I18NConstants.ERROR_CAN_NOT_RESOLVE_STATIC_TYPE__REFERENCE = Cannot resolve type in object reference ''{0}''.
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_READING_VALUE__ATR_MSG = Cannot read value of attribute "{0}" from xml: {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_RESOLVING_TYPE__KIND_MSG = Cannot resolve type "{0}": {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_CREATE_BINDING__ATTR_MSG = Cannot create value binding for "{0}": {1}
+class.com.top_logic.model.instance.exporter.I18NConstants.FAILED_TO_SERIALIZE__VAL_ATTR_MSG = Failed to serialize value "{0}" of attribute {1}: {2}
+class.com.top_logic.model.instance.importer.I18NConstants.CANNOT_ASSIGN_PLAIN_VALUE_TO_REF__ATTR_VAL_LOC = Reference attribute "{0}" must not be assigned plain value "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.ERROR_STORING_COLLECTION_TO_SINGLE_REF__ATTR_LOC = Multiple values cannot be stored into singleton reference "{0}" at {1}.
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_SETTING_VALUE__VAL_ATTR_LOC_MSG = Failed to set value "{0}" to attribute "{1}" at {2}: {3}
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_IMPORT__ID_TYPE_MSG = Failed to import object with ID "{0}" of type "{1}": {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_OBJECT__TYPE_ID_MSG = Failed to resolve object of type "{0}" with ID "{1}": {2}
+class.com.top_logic.model.instance.importer.I18NConstants.FAILED_TO_RESOLVE_VALUE__VAL_LOC_MSG = "Failed to resolve value "{0}" at {1}: {2}
+class.com.top_logic.model.instance.importer.I18NConstants.INVALID_BINARY_FORMAT__VAL_MSG = Invalid binary format in "{0}": {1}
+class.com.top_logic.model.instance.importer.I18NConstants.INVALID_DATE_FORMAT__VAL_MSG = Invalid date format in "{0}": {1}
+class.com.top_logic.model.instance.importer.I18NConstants.INVALID_ID_FORMAT__VAL_MSG = Invalid ID format in "{0}": {1}
+class.com.top_logic.model.instance.importer.I18NConstants.INVALID_NUMBER_FORMAT__VAL_MSG = Invalid number format in "{0}": {1}
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_CLASSIFIER__TYPE_PART_LOC = Enum "{0}" has no classifier "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_MODULE__NAME_REF_LOC = Module "{0}" not found in "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_PART__ATTR_TYPE_LOC = No such part "{0}" in type "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_PART__TYPE_PART_LOC = Type "{0}" has no part "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_SINGLETON__NAME_MODULE_LOC = No singleton "{0}" defined in module "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.NO_SUCH_TYPE__NAME_REF_LOC = Type "{0}" not found in "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.PRIMITIVE_TYPE_WITH_PART__TYPE_PART_LOC = Primitive type "{0}" cannot have part "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.UNKNOWN_TYPE__KIND_TYPE_LOC = Unknown type kind "{0}" of type "{1}" at {2}.
+class.com.top_logic.model.instance.importer.I18NConstants.UNRESOLVED_REFERENCE__ID_LOC = Unresolved reference "{0}" at {1}.
 class.com.top_logic.model.util.I18NConstants.ERROR_CYLCE_NOT_ALLOWED__OBJECT_ATTRIBUTE_VALUE_CYCLE = The value {2} for attribute {1} in object {0} produces a cycle: {3}
 class.com.top_logic.model.util.I18NConstants.ERROR_INVALID_LEGACY_TYPE_FORMAT__EXPECTED_ACTUAL = Invalid legacy type format "{1}", expected: {0}
 class.com.top_logic.model.util.I18NConstants.ERROR_INVALID_QUALIFIED_TYPE_NAME__VALUE = The value must be a qualified type name. A qualified type name has the format "[module]:[type]": {0}
